made tag->asset route, frontend changes
